--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "firebase": "^8.6.7",
+    "firebase-admin": "^9.9.0",
     "socket.io": "^4.1.2"
   },
   "keywords": [],
